# central-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  README.pypi.md  config.py  constants.py  models.py  prompts.py  pyproject.toml  server.py  utils.py
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  infrastructure.md  new_tool.md
.github/scripts/: extract_changelog_entry.py  generate_changelog.py
.github/workflows/: ci.yml  generate-release-pr.yml  publish-release.yml
services/: central_service.py
tests/: conftest.py  test_alerts.py  test_ap_monitoring.py  test_applications.py  test_central_service.py  test_clients.py  test_config.py  test_devices.py  test_events.py  test_hierarchy.py  test_server.py  test_sites.py  test_tools_structure.py  test_utils.py  test_utils_common.py  test_utils_sites.py  test_wlans.py
tests/integration/: conftest.py  test_alerts_live.py  test_ap_monitoring_live.py  test_clients_live.py  test_devices_live.py  test_events_live.py  test_prompts_live.py  test_server_live.py  test_sites_live.py  test_wlans_live.py
tools/: alerts.py  ap_monitoring.py  applications.py  clients.py  devices.py  events.py  hierarchy.py  prompts.py  sites.py  wlans.py
utils/: alerts.py  applications.py  clients.py  common.py  devices.py  events.py  hierarchy.py  sites.py  wlans.py
