[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "central-mcp-server"
version = "0.1.4"
description = "Unofficial MCP server for HPE Aruba Networking Central"
readme = {file = "README.pypi.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "central", "networking", "monitoring"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp[code-mode]>=3.1.1",
    "python-dotenv>=1.0.0",
    "pycentral==2.0a17",
]

[project.urls]
Documentation = "https://developer.arubanetworks.com/new-central/docs/central-mcp-overview"
Repository = "https://github.com/KarthikSKumar98/central-mcp-server"
Issues = "https://github.com/KarthikSKumar98/central-mcp-server/issues"

[project.scripts]
central-mcp-server = "server:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "INSTRUCTIONS.md",
    "server.py",
    "config.py",
    "constants.py",
    "models.py",
    "prompts.py",
    "utils/",
    "services/",
    "tools/",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "watchfiles>=1.1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["tests/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "T20",    # flake8-print: prevents stdout corruption (MCP critical)
    "T10",    # flake8-debugger: prevents silent hangs (MCP critical)
    "D",      # pydocstyle: tool descriptions surfaced to LLM
    "ANN",    # annotations: type hints used for JSON schema generation
    "ASYNC",  # flake8-async: async best practices for tool functions
]

ignore = [
    # Formatter conflicts
    "D203", "D213", "COM812", "E501",
    # Skip non-essential docstring locations
    "D100", "D101", "D104", "D105", "D106", "D107",
    # Skip less-useful annotation cases
    "ANN002", "ANN003", "ANN204",
    # Allow inline string exceptions for fast LLM feedback
    "EM101", "EM102", "TRY002", "TRY003",
]

[tool.ruff.lint.per-file-ignores]
# D and ANN strictly enforced only in tools/ — LLM descriptions and schemas live there
# D417 suppressed in tools/ — ctx parameter is boilerplate in every tool, not worth documenting
"tools/*.py"    = ["D417"]
"utils/*.py"    = ["D102", "D103", "ANN001", "ANN201", "ANN202"]
"services/*.py" = ["D102", "D103", "ANN001", "ANN201", "ANN202"]
"models.py"     = ["D102", "D103", "ANN001", "ANN201", "ANN202"]
"config.py"     = ["D102", "D103", "ANN001", "ANN201", "ANN202"]
"server.py"     = ["D103", "ANN001", "ANN201", "ANN202"]
".github/scripts/*.py" = ["T201", "ANN", "D"]
"scripts/fetch_fastmcp_docs.py" = ["ALL"]
